--- a/style.css
+++ b/style.css
@@ -74,8 +74,61 @@ body {
   flex-direction: column;
   align-items: center;
 }
-.img-profile {
+.img-profile img {
   max-width: 100%;
   border-radius: 50%;
   border: 5px solid #fff;
+}
+
+.name-profile {
+  text-transform: capitalize; /* coloca a primeira letra em maiúsculo */
+  font-size: 17px;
+  font-weight: 700;
+  color: var(--dark-blue);
+  padding-top: 1rem;
+}
+
+.age-profile {
+  color: var(--dark-grayish);
+  font-weight: 400;
+}
+.city-profile {
+  text-transform: capitalize;
+  font-size: 14px;
+  color: var(--dark-gray);
+  padding-top: 0.5rem;
+  margin-bottom: 1rem;
+}
+
+.card-footer {
+  position: absolute;
+  bottom: 0;
+  border-top: 1px solid #e9e9e9;
+  width: 100%;
+}
+
+.social-numbers {
+  display: flex;
+  justify-content: space-around;
+}
+
+.item-social-numbers {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+}
+
+.number {
+  font-weight: 700;
+  font-size: 20px;
+  margin-bottom: 0.2rem;
+}
+
+.social-description {
+  text-transform: capitalize;
+  font-size: 10px;
+  font-weight: 300;
+  letter-spacing: 2px;
 }
